--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- HTML - Name: positioning.html -->
-    <title>Positioning Activity</title>
+    <title>Web Fundamentals</title>
     <link rel="stylesheet" type="text/css" href="positioning.css" />
   </head>
   <body>
