Adding the rivwr wareframe

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -151,7 +151,7 @@
 
     <h3>Rivers</h3>
 
-    <img class = "wireframe" src="images/wireframe_rivers.png" alt="page 2 wireframe">
+    <img class = "wireframe" src="https://gabyugarte.github.io/WDD130/images/rivers.png" alt="page 2 wireframe">
 
 
   </main>
