--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -150,7 +150,6 @@
     <h3>Home page</h3>
     <p> Have An Adventure</p>
     <p> Make Memories with Dry Oar</p>
-    <a class='book' href="rates.html">Book Now</a>
     <p>Rivers</p>
     <p>Camping</p>
     <p>Rapids</p>
@@ -189,11 +188,12 @@
     Grand Canyon river rafting combines world-class whitewater with breathtaking scenery to make one truly unforgettable river experience. The canyon is filled not only with exhilarating whitewater rapids, but with side canyons and ancient indian ruins accessible only by river.
         
     CLASS I - X: The Grand Canyon uses a unique river rating scale. The rapids in the Canyon are technically rated I - X ( 1 - 10) to accommodate such a wide variety of rapids and river variances. However, most people are familiar with the regular I - V river rating scale, so we often refer to both</p>
-    <p>Images for the Home page</p>
+    <p>Images for the Rivers page</p>
 
     <img src="images/rafting_riversPage.jpg" alt="riversPage wireframe" /><br>  
     <img src="images/raftingRiversPage.jpg" alt="riversPage wireframe" /><br> 
     <img src="images/rafting14_riversPage.jpg" alt="riversPage wireframe" />
+
     <h2>Wireframes</h2>
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
     <h3>Home</h3>
