--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,8 +16,8 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
-                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="./rivers.html">Rivers</a>
+                <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
@@ -35,18 +35,25 @@
         </div>
         <main class="home-grid">
             <section class="rivers-card">
+                <a href="rivers.html">
                 <img class="card-img" src="images/rivers.jpg" alt="river in forest">
                 <img class="icon" src="images/river_icon.png" alt="river icon">
+                </a>
                 <h2>Rivers</h2>
+                
             </section>
             <section class="camping-card">
+                <a href="images/camping.jpg" target="_blank">
                 <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
                 <img class="icon" src="images/fire_icon.png" alt="fire icon">
+                </a>
                 <h2>Camping</h2>
             </section>
             <section class="rapids-card">
+                <a href="images/rapids.jpg" target="_blank">
                 <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
                 <img class="icon" src="images/oars.png" alt="oars icon">
+                </a>
                 <h2>Rapids</h2>
             </section>
             <div id="background"></div> 
