--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -40,13 +40,11 @@
                 <section class="rivers2">
                     <h2 class="rivers-name">Desolation and Gray Canyon, Utah</h2>
                     <p class="rivers-p"> Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river flows towards the mighty Colorado river and the sea. </p>
-                    <p class="rivers-p">
-                        <ul>
-                            <li>Grey stone cliffs</li>
-                            <li>Beautiful desert scenery</li>
-                            <li>Great rapids</li>
-                        </ul> 
-                    </p> 
+                    <ul class="rivers-p">
+                        <li>Grey stone cliffs</li>
+                        <li>Beautiful desert scenery</li>
+                        <li>Great rapids</li>
+                    </ul> 
                     <p class="rivers-p">This 84-mile trip runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.</p>
                     <p class="rivers-p"> Desolation is rated a Class II/III and is usually done in 6 days Desolation Canyon has been recognized as a National Landmark. This designation is based on the uniqueness and rich history that the canyon tells.</p>
                 </section>
@@ -63,11 +61,11 @@
                     <p class="rivers-p">This is the grand daddy of all canyons and the grand daddy of all river trips.</p>
                     <p class="rivers-p">You will never forget your visit to the Grand Canyon.</p>
                     <p class="rivers-p">Grand Canyon river rafting combines world-class whitewater with breathtaking scenery to make one truly unforgettable river experience. The canyon is filled not only with exhilarating whitewater rapids, but with side canyons and ancient indian ruins accessible only by river. </p>
-                    <p class="rivers-p">
-                        <ul>
-                            <li>I - X: The Grand Canyon uses a unique river rating scale.</li>
-                        </ul> 
-                    </p>    
+                    
+                    <ul class="rivers-p">
+                        <li>I - X: The Grand Canyon uses a unique river rating scale.</li>
+                    </ul> 
+                  
                     <p class="rivers-p">The rapids in the Canyon are technically rated I - X ( 1 - 10) to accommodate such a wide variety of rapids and river variances. However, most people are familiar with the regular I - V river rating scale, so we often refer to both</p>
                 </section>
             </div>
