--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -32,11 +32,11 @@
                     <p class="rivers-p">The Salmon was given the nickname long ago as the River of No Return by the people living near it because of the number of folks that came to visit and fell so in love with the rugged beauty of the river that they never left. Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted. The river corridor is also lined with awe inspiring ponderosa pine which tower over the sandy beaches in the campsites and provide shelter from sun or rain when needed. </p>
                     <p class="rivers-p">Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but families with children who like to swim tend to appreciate the late summer's slower, warmer water more.</p>
                 </section>
-                <section >
+                <div>
                     <a class="rivers-img1" target="_blank" href="./images/rafting_riversPage.jpg">
                         <img src="./images/rafting_riversPage.jpg" alt="riversPictures" class="rivers-img">
                     </a>
-                </section>
+                </div>
                 <section class="rivers2">
                     <h2 class="rivers-name">Desolation and Gray Canyon, Utah</h2>
                     <p class="rivers-p"> Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river flows towards the mighty Colorado river and the sea. </p>
@@ -48,11 +48,11 @@
                     <p class="rivers-p">This 84-mile trip runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.</p>
                     <p class="rivers-p"> Desolation is rated a Class II/III and is usually done in 6 days Desolation Canyon has been recognized as a National Landmark. This designation is based on the uniqueness and rich history that the canyon tells.</p>
                 </section>
-                <section >
+                <div >
                     <a class="rivers-img2" target="_blank" href="./images/raftingRiversPage.jpg">
                         <img src="./images/raftingRiversPage.jpg" alt="riversPictures" class="rivers-img">
                     </a>
-                </section>
+                </div>
                 <section class="rivers3">
                     <h2 class="rivers-name">Grand Canyon, Arizona</h2>
                     <a class = "rivers-img3" target="_blank" href="./images/rafting14_riversPage.jpg">
