--- a/brainTech/site-plan.html
+++ b/brainTech/site-plan.html
@@ -161,7 +161,7 @@
         <li>Data Scientists are also growing in high demand and outlook throughout every industry for doing a job heavily based on collecting, analyzing, and interpreting massive sets of data. They often work with machine learning engineers to help develop algorithms that clean the data for analysis. Once the analysis is complete, data scientists will then work to develop data-driven solutions to business problems from many fields. A specific skill set is required for this line of work, but it’s also a very versatile career and can lead to many industries of employment.</li>
       </ul>
       <p>I reccomend this page for your learning path to begin with AI: </p>
-      <a href="https://microsoft.github.io/AI-For-Beginners/" target="_blank">AI Projects for begginers</a>   
+      <a href="https://microsoft.github.io/AI-For-Beginners/" target="_blank">AI Learning Path</a>   
       <p>Images for the Page 2</p>
         <img src="img/AIlearningPath.jpg" alt="image for page"><br>
         <img src="img/AILearningPath2.jpg" alt="image for page"><br>
@@ -175,15 +175,31 @@
       </p>
       <p>Reading books is one of the most important things which I should do this year to enhance my learning. I should say this, if you are a book lover then books are one of the best sources to enhance your learning. I can choose to read freely-available e-books or purchase the hardcopy, anything can work. There are a lot of books one can purchase and start reading but some good books which I would suggest reading are:</p>
       <ul>
-        <li>Python for Data Analysis</li>
-        <li>An Introduction to Statistical Learning</li>
-        <li>Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow</li>
+        <li>Python for Data Analysis - Wes McKinney</li>
+        <li>An Introduction to Statistical Learning - Gareth James</li>
+        <li>Superintelligence - Nick Bostrom</li>
         <li>Make your own Neuronal Network - Tariq Rashid</li>
         <li>Artificial Intelligence for dummies - Jhon Paul Mueller</li>
         <li>SuperIntelligence - Nick Bostrom</li>
       </ul>
-
       <p>Click in <a href="https://www.guru99.com/ai-machine-learning-books.html" target="_blank">BOOKS</a> for more suggestions.</p>
+
+      <h4>Artificial Intelligence Projects Ideas for Beginners</h4>
+      <ul>
+        <li>Resume Parser</li>
+          <p>You can build a resume parser with the help of artificial intelligence and machine learning techniques that can skim through a candidate’s application and identify skilled candidates, filtering out people who fill their resume with unnecessary keywords.</p>
+        <li>Fake News Detector </li>
+          <p>You can use a pre-trained machine learning model called BERT to perform this classification. BERT is a Natural Language Processing (NLP) model that has been made open-source. You can load BERT into Python and just add one additional output layer for your text classification task.</p>
+        <li>Translator App</li>
+          <p>You can build your own AI translator app with a transformer. To do this, you can load a pre-trained transformer model into Python. Then, transform the text you want to translate into tokens and feed it into the pre-trained model.</p>
+        <li>Instagram Spam Detection</li>
+          <p>You can build a spam detection model using AI techniques to identify the difference between spam and legitimate comments.</p>
+      </ul>
+      <p>I reccomend this page for more project ideas: </p>
+      <a href="https://www.projectpro.io/article/artificial-intelligence-project-ideas/461" target="_blank">AI Projects for begginers</a>   
+
+
+
       <p>Images for the Page 3</p>
         <img src="img/AIHumanRobot.jpg" alt="image for page3"><br>
         <img src="img/AIPythonBook.jpg" alt="image for page3"><br>
@@ -201,21 +217,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Home Page will have a Parallax Scrolling Effect
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="./img/homePage.drawio.png" alt="home page wireframe">
 
       <h3>AI - Learning Path</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        I will use grid possitioning for this page 
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="./img/learningPathPage.drawio.png" alt="learning Path Page wireframe">
 
       <h3>Books - Projects</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        I will use an Image with Transparent Text and an Image Gallery
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="./img/booksProjects.drawio.png" alt="Bokks Projects wireframe">
     </main>
   </body>
 
