--- a/brainTech/site-plan.html
+++ b/brainTech/site-plan.html
@@ -137,7 +137,9 @@
         Artificial neural networks and deep learning artificial intelligence technologies are quickly evolving, primarily because AI processes large amounts of data much faster and makes predictions more accurately than humanly possible.
         
         While the huge volume of data being created on a daily basis would bury a human researcher, AI applications that use machine learning can take that data and quickly turn it into actionable information. As of this writing, the primary disadvantage of using AI is that it is expensive to process the large amounts of data that AI programming requires.</p>
-      <p>Images for the Home page</p>
+      <h4>What are the advantages and disadvantages of artificial intelligence?</h4>
+      <p>Artificial neural networks and deep learning artificial intelligence technologies are quickly evolving, primarily because AI processes large amounts of data much faster and makes predictions more accurately than humanly possible.</p>
+        <p>Images for the Home page</p>
         <img src="img/AI.jpg" alt="image for homepage"><br>
         <img src="img/ArtificialIntelligence.jpg" alt="image for homepage"><br>
         <img src="img/AIHumanRobot2.jpg" alt="image for homepage"><br>
@@ -201,7 +203,6 @@
 
 
       <p>Images for the Page 3</p>
-        <img src="img/AIHumanRobot.jpg" alt="image for page3"><br>
         <img src="img/AIPythonBook.jpg" alt="image for page3"><br>
         <img src="img/AILitlelCars.jpg" alt="image for page3"><br>
         <img src="img/AIMachines.jpg" alt="image for page3"><br>
