--- a/brainTech/booksProjects.html
+++ b/brainTech/booksProjects.html
@@ -30,32 +30,33 @@
                 </div>
             </div>
             <section class="b-recomendations">
-                <h4>Books recomendations </h4>
+                <h3>Book recomendations </h3>
                 <p>Reading books is one of the most important things which I should do this year to enhance my learning. I should say this, if you are a book lover then books are one of the best sources to enhance your learning. I can choose to read freely-available e-books or purchase the hardcopy, anything can work. There are a lot of books one can purchase and start reading but some good books which I would suggest reading are:</p>
-                <ul>
+                <ul class="recomendations_list">
                   <li>Python for Data Analysis - Wes McKinney</li>
                   <li>An Introduction to Statistical Learning - Gareth James</li>
                   <li>Superintelligence - Nick Bostrom</li>
                   <li>Make your own Neuronal Network - Tariq Rashid</li>
                   <li>Artificial Intelligence for dummies - Jhon Paul Mueller</li>
                   <li>SuperIntelligence - Nick Bostrom</li>
+                  <li>Click in <a class="link" href="https://www.guru99.com/ai-machine-learning-books.html" target="_blank">BOOKS</a> for more suggestions.</li> 
+
                 </ul>
-                <p>Click in <a href="https://www.guru99.com/ai-machine-learning-books.html" target="_blank">BOOKS</a> for more suggestions.</p>
             </section>
+            <h3>Artificial Intelligence Projects Ideas for Beginners</h3>
             <section class="projects-galery">
-                <div class="row">
-                    <div class="column">
+                <div class="row_grid">
+                    <div class="column1">
                       <img src="img/AILitlelCars.jpg" alt="AI Projects" style="width:100%">
                     </div>
-                    <div class="column">
+                    <div class="column2">
                       <img src="img/AIMachines.jpg" alt="AI Projects" style="width:100%">
                     </div>
-                    <div class="column">
+                    <div class="column3">
                       <img src="img/AIMachines2.jpg" alt="AI Projects" style="width:100%">
                     </div>
                   </div>
-                  <h4>Artificial Intelligence Projects Ideas for Beginners</h4>
-                  <ul>
+                  <ul class="recomendations_list"> 
                     <li>Resume Parser</li>
                       <p>You can build a resume parser with the help of artificial intelligence and machine learning techniques that can skim through a candidate’s application and identify skilled candidates, filtering out people who fill their resume with unnecessary keywords.</p>
                     <li>Fake News Detector </li>
@@ -64,18 +65,15 @@
                       <p>You can build your own AI translator app with a transformer. To do this, you can load a pre-trained transformer model into Python. Then, transform the text you want to translate into tokens and feed it into the pre-trained model.</p>
                     <li>Instagram Spam Detection</li>
                       <p>You can build a spam detection model using AI techniques to identify the difference between spam and legitimate comments.</p>
-                  </ul>
-                  <p>I reccomend this page for more project ideas: </p>
-                  <a href="https://www.projectpro.io/article/artificial-intelligence-project-ideas/461" target="_blank">AI Projects for begginers</a>   
-            
+                    </ul>
+                    <h4>I reccomend this page for more project ideas: <a class="link" href="https://www.projectpro.io/article/artificial-intelligence-project-ideas/461" target="_blank">AI Projects for begginers</a></h4>
+
             </section>
-
         </main>
-
         <footer>
             <p>BrainTech &copy; 2022 - Gabriela Ugarte</p>
             <p><a href="site-plan.html">Site Plan</a></p>
-            <p><a href="contact.html">Contact Us</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="img/facebook.png" alt="fb icon">
