--- a/brainTech/learningPath.html
+++ b/brainTech/learningPath.html
@@ -25,7 +25,7 @@
             <div class="lp-grid">
                 <section class="lp1">
                     <h2 class="lp-name">Reasons to Study Artificial Intelligence</h2>
-                    <p>
+                    <p class="lp-p">
                         Globally, the AI software market grew 54% in 2020 and is projected to continue growing almost 40% annually from now through 2023. While this means the future for AI is undeniably bright, there are also other reasons to consider studying it.
                 
                         Getting a great job might be easy with an AI degree, the major itself has a steep learning curve. Still, the value of the degree serves as motivation enough for many ambitious students who complete the major and reap a reward that far outweighs the invested time and effort.
@@ -37,31 +37,29 @@
                 </section>
                 <div>
                     <a class="learningPath-img1" target="_blank" href="img/AIlearningPath.jpg">
-                        <img src="img/AIlearningPath.jpg" alt="LearningPath picture" class="lp-img">
+                        <img class = "learningPath-img" src="img/AIlearningPath.jpg" alt="LearningPath picture" class="lp-img">
                     </a>
                 </div>
                 <section class="lp2">
                     <h2 class="lp-name">Machine Learning and Robotics</h2>
-                    <ul class="lp-p">
-                        <li>Machine Learning Engineers not only earn a higher pay than most, but they help design software capable of “learning” on its own to help automate unpredictable models. Working alongside data scientists, machine learning engineers build out theoretical models that help crunch enormous amounts of data in real-time. In other words, this job uses data modeling to help find patterns in high volumes of data or predict unseen circumstances. In some ways, machine learning engineers are helping predict the future!</li>
-                        <li>Robotics Engineers are also popular positions for their pay scale, a robotics engineer’s job is to develop machines that perform functions much like that of humans. This can apply to almost any industry and at any level of use, from common consumers to government intelligence. This job is perfect for the innovative computer scientist, allowing him or her to not only flex technical skillsets but also creativity.</li>
-                    </ul>
+                    <p class="lp-p">Machine Learning Engineers not only earn a higher pay than most, but they help design software capable of “learning” on its own to help automate unpredictable models. Working alongside data scientists, machine learning engineers build out theoretical models that help crunch enormous amounts of data in real-time. In other words, this job uses data modeling to help find patterns in high volumes of data or predict unseen circumstances. In some ways, machine learning engineers are helping predict the future!. Robotics Engineers are also popular positions for their pay scale, a robotics engineer’s job is to develop machines that perform functions much like that of humans. This can apply to almost any industry and at any level of use, from common consumers to government intelligence. This job is perfect for the innovative computer scientist, allowing him or her to not only flex technical skillsets but also creativity.</p>
+                    
                 </section>
                 <div >
                     <a class="learningPath-img2" target="_blank" href="img/AILearningPath2.jpg">
-                        <img src="img/AILearningPath2.jpg" alt="LearningPath picture" class="lp-img">
+                        <img class = "learningPath-img" src="img/AILearningPath2.jpg" alt="LearningPath picture" class="lp-img">
                     </a>
                 </div>
                 <section class="lp3">
                     <a class="learningPath-img3" target="_blank" href="img/machinereading.jpg">
-                        <img src="img/machinereading.jpg" alt="LearningPath picture" class="lp-img">
+                        <img class = "learningPath-img" src="img/machinereading.jpg" alt="LearningPath picture" class="lp-img">
                     </a>
-                    <ul class="lp-p">
+                    <ul id="lp-p">
                         <li>Computer Vision Engineers are in demand for doing work that as the name implies helps computers “see” images, process them, and learn. This data can include movement, distances, and movements. Much of the work done by computer vision engineers has a forward-facing impact on everyday life. For example, if your car has a rear-view camera that helps you park, this was developed by computer vision engineers.</li>
                         <li>Data Scientists are also growing in high demand and outlook throughout every industry for doing a job heavily based on collecting, analyzing, and interpreting massive sets of data. They often work with machine learning engineers to help develop algorithms that clean the data for analysis. Once the analysis is complete, data scientists will then work to develop data-driven solutions to business problems from many fields. A specific skill set is required for this line of work, but it’s also a very versatile career and can lead to many industries of employment.</li>
                     </ul>
-                    <p>I reccomend this page for your learning path to begin with AI: </p>
-                    <a href="https://microsoft.github.io/AI-For-Beginners/" target="_blank">AI Learning Path</a>                   
+                    <p class="lp-p">I reccomend this page for your learning path to begin with AI: </p>
+                    <a class ="link" href="https://microsoft.github.io/AI-For-Beginners/" target="_blank">AI Learning Path</a>                   
               </section>
             </div>
         </main>
