--- a/brainTech/site-plan.html
+++ b/brainTech/site-plan.html
@@ -60,10 +60,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Roboto  <!-- change this -->
+        Heading Font: "Montserrat" , Helvetica, sans-serif
       </h4>
       <h4>
-        Paragraph Font: Montserrat <!-- change this -->
+        Paragraph Font: "Lato", sans-serif
       </h4>
       <h3>
         Normal paragraph example
@@ -140,8 +140,7 @@
       <h4>What are the advantages and disadvantages of artificial intelligence?</h4>
       <p>Artificial neural networks and deep learning artificial intelligence technologies are quickly evolving, primarily because AI processes large amounts of data much faster and makes predictions more accurately than humanly possible.</p>
         <p>Images for the Home page</p>
-        <img src="img/AI.jpg" alt="image for homepage"><br>
-        <img src="img/ArtificialIntelligence.jpg" alt="image for homepage"><br>
+        <img src="img/AIHumanRobot.jpg" alt="image for homepage"><br>
         <img src="img/AIHumanRobot2.jpg" alt="image for homepage"><br>
         <img src="img/NeuronalNetworks.jpg" alt="image for homepage">
 
