--- a/brainTech/learningPath.html
+++ b/brainTech/learningPath.html
@@ -63,11 +63,10 @@
               </section>
             </div>
         </main>
-
         <footer>
-            <p>BrainTech &copy; 2022 - Gabriela Ugarte</p>
+            <p>BrainTech &copy; 2022 - <a href="https://gabyugarte.github.io/" target="_blank">Gabriela Ugarte</a></p>
             <p><a href="site-plan.html">Site Plan</a></p>
-            <p><a href="contact.html">Contact Us</a></p>
+            <p><a href="./contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="img/facebook.png" alt="fb icon">
