change some css rules and html

--- a/brainTech/site-plan.html
+++ b/brainTech/site-plan.html
@@ -231,7 +231,7 @@
       <p>         
         I will use an Image with Transparent Text and an Image Gallery
       </p>
-      <img src="./img/booksProjects.drawio.png" alt="Bokks Projects wireframe">
+      <img src="./img/books-projects.drawio.png" alt="Bokks Projects wireframe">
     </main>
   </body>
 
