--- a/brainTech/books-projects.html
+++ b/brainTech/books-projects.html
@@ -16,8 +16,8 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="learningPath.html" target="_blank">AI - Learning Path</a>
-                <a href="booksProjects.html" target="_blank">Books - Projects</a>
+                <a href="learning-path.html" target="_blank">AI - Learning Path</a>
+                <a href="books-projects.html" target="_blank">Books - Projects</a>
             </nav>
         </header>
 
