--- a/brainTech/learning-path.html
+++ b/brainTech/learning-path.html
@@ -16,8 +16,8 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="learningPath.html" target="_blank">AI - Learning Path</a>
-                <a href="booksProjects.html" target="_blank">Books - Projects</a>
+                <a href="learning-path.html" target="_blank">AI - Learning Path</a>
+                <a href="books-projects.html" target="_blank">Books - Projects</a>
             </nav>
         </header>
         <main>
@@ -37,7 +37,7 @@
                 </section>
                 <div>
                     <a class="learningPath-img1" target="_blank" href="img/AIlearningPath.jpg">
-                        <img class = "learningPath-img" src="img/AIlearningPath.jpg" alt="LearningPath picture" class="lp-img">
+                        <img class = "learningPath-img lp-img" src="img/AIlearningPath.jpg" alt="LearningPath picture">
                     </a>
                 </div>
                 <section class="lp2">
@@ -46,13 +46,13 @@
                     
                 </section>
                 <div >
-                    <a class="learningPath-img2" target="_blank" href="img/AILearningPath2.jpg">
-                        <img class = "learningPath-img" src="img/AILearningPath2.jpg" alt="LearningPath picture" class="lp-img">
+                    <a class="learningPath-img2 lp-img" target="_blank" href="img/AILearningPath2.jpg">
+                        <img class = "learningPath-img" src="img/AILearningPath2.jpg" alt="LearningPath picture">
                     </a>
                 </div>
                 <section class="lp3">
                     <a class="learningPath-img3" target="_blank" href="img/machinereading.jpg">
-                        <img class = "learningPath-img" src="img/machinereading.jpg" alt="LearningPath picture" class="lp-img">
+                        <img class = "learningPath-img lp-img" src="img/machinereading.jpg" alt="LearningPath picture" class="lp-img">
                     </a>
                     <ul id="lp-p">
                         <li>Computer Vision Engineers are in demand for doing work that as the name implies helps computers “see” images, process them, and learn. This data can include movement, distances, and movements. Much of the work done by computer vision engineers has a forward-facing impact on everyday life. For example, if your car has a rear-view camera that helps you park, this was developed by computer vision engineers.</li>
