--- a/brainTech/learning-path.html
+++ b/brainTech/learning-path.html
@@ -16,8 +16,8 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="learning-path.html" target="_blank">AI - Learning Path</a>
-                <a href="books-projects.html" target="_blank">Books - Projects</a>
+                <a href="learning-path.html">AI - Learning Path</a>
+                <a href="books-projects.html">Books - Projects</a>
             </nav>
         </header>
         <main>
@@ -52,7 +52,7 @@
                 </div>
                 <section class="lp3">
                     <a class="learningPath-img3" target="_blank" href="img/machinereading.jpg">
-                        <img class = "learningPath-img lp-img" src="img/machinereading.jpg" alt="LearningPath picture" class="lp-img">
+                        <img class = "learningPath-img lp-img" src="img/machinereading.jpg" alt="LearningPath picture">
                     </a>
                     <ul id="lp-p">
                         <li>Computer Vision Engineers are in demand for doing work that as the name implies helps computers “see” images, process them, and learn. This data can include movement, distances, and movements. Much of the work done by computer vision engineers has a forward-facing impact on everyday life. For example, if your car has a rear-view camera that helps you park, this was developed by computer vision engineers.</li>
