final changes adding pics

--- a/index.html
+++ b/index.html
@@ -2,14 +2,59 @@
 <html lang="en">
   <head>
     <!-- HTML - Name: positioning.html -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex"/>
+    <meta name="keywords" content="portfolio, programacion, HTML, CSS, JAVASCRIPT, web development"/>
+    <meta name="author" content="Gabriela Ugarte Maco"/>
+    <meta name="description" content="Course: WDD 130 Web Fundamentals"/>  
     <title>Web Fundamentals</title>
-    <link rel="stylesheet" type="text/css" href="positioning.css" />
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-  <h1>
-    Web Fundamentals
-  </h1>
-  </body>
+  <section class="teams" id="teams">
+    <h1>Course: WDD 130 Web Fundamentals</h1>
+    <h1>Challenges of this course, using: HTML, CSS, JS</h1>
+
+    <div class="container">
+        <div class="carousel owl-carousel">
+            <div class="card">
+                <div class="box">
+                    <div class="text">About Me Page</div>
+                    <p>Introducing myself</p>
+                    <a href="https://gabyugarte.github.io/WDD130/aboutme/" target="_blank"><img src="img/aboutme.png" alt="aboutme page"></a>
+                </div>
+                <a href="https://github.com/gabyugarte/WDD130/tree/main/aboutme" target="_blank" title="github code"><img  id ="github-code" src="img/2111432.png" alt="githubicon"></a>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <div class="text">Dry Oar Page</div>
+                    <p> A Rafting Page </p>
+                    <a href="https://gabyugarte.github.io/WDD130/wwr/index.html" target="_blank"><img src="img/wwr.png" alt="Dryoar Page"></a>
+                </div>
+                <a href="https://github.com/gabyugarte/WDD130/tree/main/wwr" target="_blank" title="github code"><img  id ="github-code" src="img/2111432.png" alt="githubicon"></a>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <div class="text">Positioning Exercises</div>
+                    <p>Using Grid layout</p>
+                    <a href="https://gabyugarte.github.io/WDD130/positioning.html" target="_blank"><img src="img/positioning.png" alt="Positioning"></a>
+                </div>
+                <a href="https://github.com/gabyugarte/WDD130/blob/main/positioning.html" target="_blank" title="github code"><img  id ="github-code" src="img/2111432.png" alt="githubicon"></a>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <div class="text">Brain Tech</div>
+                    <p>An Artificial Intelligence Page</p>
+                    <a href="https://gabyugarte.github.io/WDD130/brainTech/" target="_blank"><img src="img/aipage.png" alt="brainTech page"></a>
+                </div>
+                <a href="https://github.com/gabyugarte/WDD130/tree/main/brainTech" target="_blank"><img  id ="github-code" src="img/2111432.png" alt="githubicon"></a>
+            </div>
+        </div>
+    </div>
+</section>
+</body>
 </html>
 
 
