--- a/brainTech/books-projects.html
+++ b/brainTech/books-projects.html
@@ -52,7 +52,7 @@
                          <!-- The Modal 1-->
                     <div id="myModal" class="modal">
                       <span class="close">&times;</span>
-                      <img class="modal-content" id="img01">
+                      <img src = # class="modal-content" id="img01">
                       <div id="caption"></div>
                     </div>
                     <div class="column2">
@@ -61,7 +61,7 @@
                      <!-- The Modal 2-->
                     <div id="myModal2" class="modal2">
                       <span class="close2">&times;</span>
-                      <img class="modal-content" id="img02">
+                      <img src = # class="modal-content" id="img02">
                       <div id="caption2"></div>
                     </div>
                     <div class="column3">
@@ -70,7 +70,7 @@
                     <!-- The Modal 3-->
                     <div id="myModal3" class="modal3">
                       <span class="close3">&times;</span>
-                      <img class="modal-content" id="img03">
+                      <img src = # class="modal-content" id="img03">
                       <div id="caption3"></div>
                     </div>
                   </div>
