--- a/brainTech/learning-path.html
+++ b/brainTech/learning-path.html
@@ -51,6 +51,7 @@
                     </a>
                 </div>
                 <section class="lp3">
+                    <h2 class="lp-name">Data Scientists</h2>
                     <a class="learningPath-img3" target="_blank" href="img/machinereading.jpg">
                         <img class = "learningPath-img lp-img" src="img/machinereading.jpg" alt="LearningPath picture">
                     </a>
@@ -60,7 +61,7 @@
                     </ul>
                     <p class="lp-p">I reccomend this page for your learning path to begin with AI: </p>
                     <a class ="link" href="https://microsoft.github.io/AI-For-Beginners/" target="_blank">AI Learning Path</a>                   
-              </section>
+                </section>
             </div>
         </main>
         <footer>
