--- a/brainTech/contactus.html
+++ b/brainTech/contactus.html
@@ -28,9 +28,9 @@
                 <h4> or send me a message</h4>
                 <form action="/my-handling-form-page" method="post">
                     <label for="name">Name:</label>
-                        <input type="text" id="name" name="user_name" />
+                        <input type="text" id="name" name="user_name">
                     <label for="mail">E-mail:</label>
-                        <input type="email" id="mail" name="user_email" />
+                        <input type="email" id="mail" name="user_email">
                     <label for="msg">Message:</label>
                         <textarea id="msg" name="user_message"></textarea>
                         <button class = "button" type="submit"> Send your message </button>
